--- a/src/Layout/layout.css
+++ b/src/Layout/layout.css
@@ -1792,6 +1792,32 @@ Teacher Page start
   padding: 10px 45px;
   float: right;
 }
+
+@media screen and (max-width: 550px) {
+  .RateHomeworkModal {
+    top: 1.625rem;
+  }
+  .RateHomeworkModal .closeModal {
+    right: 31px;
+    top: 17px;
+  }
+  .RateHomeworkModal .modal-title h1 span{
+    font-size: 20px;
+  }
+  .RateHomeworkModal .modal-title h1 img{
+    width: 25px;
+    padding: 0;
+  }
+  .RateHomeworkModal .modal-content .comment-box{
+    font-size: 13px;
+  }
+  .RateHomeworkModal .modal-content .schedule-box .box h4{
+    font-size: 12px;
+  }
+  .RateHomeworkModal .modal-content .schedule-box .box img {
+    width: 20px;
+  }
+}
 /* RateHomeworkModal style end */
 
 /* schedule info modal style start */
