--- a/src/Layout/layout.css
+++ b/src/Layout/layout.css
@@ -1851,6 +1851,7 @@ Teacher Page start
 .scheduleInfoModal .modal-content .user-box .box {
   padding: 5px;
   font-size: 12px;
+  margin-left: 7px;
 }
 .scheduleInfoModal .modal-content .user-box .box p {
   color: rgb(227 227 227);
