--- a/src/Layout/layout.css
+++ b/src/Layout/layout.css
@@ -1844,8 +1844,9 @@ Teacher Page start
 }
 
 .scheduleInfoModal .modal-content .user-box img {
-  width: 42px;
-  height: 42px;
+  width: 48px;
+  height: 48px;
+  border-radius: 50px;
 }
 .scheduleInfoModal .modal-content .user-box .box {
   padding: 5px;
